@@ -12,6 +12,7 @@ Version 1.4.9 - CVS
   - Allowed moving folders to trash in courier.
   - Fix misspelled constant PREG_SPLIT_NI_EMPTY in sqimap_get_message
     (#1543573).
+  - Provide View Unsafe Images link on viewing a text/html attachment.
 
 Version 1.4.8 - 11th August 2006
 --------------------------------
